# crc24

./: .credo.exs  .gitignore  README.md  mix.exs
.github/workflows/: elixir.yml  rust.yml
.zed/: settings.json
lib/: crc24.ex
lib/native/: crc24.ex
native/crc24/: Cargo.toml  README.md
native/crc24/.cargo/: config.toml
native/crc24/src/: lib.rs  nif.rs
test/: crc24_test.exs
