[package]
name = "crc24"
version = "0.1.0"
authors = ["skwerlman"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[features]
nif = []

[lib]
name = "crc24"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
rustler = { version = "0.34.0", features = ["nif_version_2_17"] }
